# AdventOfCode2025

Day1/: main.cpp
Day2/: main.cpp
Day3/: CMakeLists.txt  main.cpp
Day5/: main.py
Day8/: main.cpp
